--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Welcome to rc9</h1>
+<h1>best exploit ever</h1>
+<h1>if ya want it join the discord!!!!!!!!!!!!!!!!!!!!!!!!!!! and download it on https://mega.nz/file/lSgXia7a</h1>
