--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
 <h1>Welcome to rc9</h1>
 <h1>best exploit ever</h1>
 <h1>if ya want it join the discord!!!!!!!!!!!!!!!!!!!!!!!!!!! and download it on https://mega.nz/file/lSgXia7a</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<p>Check out <a href="https://discord.com/invite/HY2cUvE7hP" target="_blank" rel="noopener noreferrer">Discord</a>.</p>
