--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@
 
 
 
-<p>Check out <a href="https://discord.com/invite/HY2cUvE7hP" target="_blank" rel="noopener noreferrer">Discord</a>.</p>
+<p><a href="https://discord.com/invite/HY2cUvE7hP" target="_blank" rel="noopener noreferrer">Discord</a>.</p>
